@@ -262,7 +262,14 @@ namespace CassandraSharp.Transport
                             throw;
                         }
                     }
+
                     _instrumentation.ClientTrace(queryInfo.Token, EventType.EndRead);
+
+                    InstrumentationToken token = queryInfo.Token;
+                    if (0 != (token.ExecutionFlags & ExecutionFlags.ServerTracing))
+                    {
+                        TracingExtensions.AsyncQueryAndPushTracingSession(this, frameReader.TraceId, token, _instrumentation, _logger);
+                    }
                 }
             }
         }
