@@ -4,6 +4,7 @@ version 3.0.0 [not released]
 - future are now a TPL Task returning a list of results
 - improved throughput using LongRunning connection type
 - NuGet support for net40 and net45 binaries
+- performance report is asynchronous
 
 version 2.3.1
 - fixed connection leak on read error
